# poetry_project_setup

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
